added better way of dealing with rate limiting with Promise.delay

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "cheerio": "^1.0.0-rc.2",
     "json2csv": "^3.10.0",
     "request": "^2.81.0",
